# xrt-rs

./: .gitignore  Cargo.toml  Makefile  README.md  add.cpp  build.rs  env.sh  wrapper.h  wrapper.hpp
hls/: Makefile  vscale.cpp
src/: bindings.rs  bindings_c.rs  bindings_cpp.rs  buffer.rs  common.rs  components.rs  device.rs  device_manager.rs  error.rs  ffi.rs  kernel.rs  lib.rs  main.rs  run.rs  state.rs  utils.rs  wrapper.rs  wrapper_tests.rs  xclbin_reader.rs
src/components/: buffers.rs  common.rs  device.rs  kernel.rs  run.rs
src/ffi/: bindings_c.rs  mod.rs
src/managed/: arguments.rs  device.rs  mod.rs  run.rs
src/native/: buffer.rs  device.rs  kernel.rs  mod.rs  run.rs
tests/: api.rs  managed.rs  native.rs  raw.rs  simple.rs  wrapper.rs
tests/data/: mod.rs
xrt_proc_macro/: Cargo.toml
xrt_proc_macro/src/: lib.rs  xclbin_reader.rs
