[package]
name = "xrt"
version = "0.3.0"
edition = "2021"
description = "Wrapper for the Xilinx Runtime Library (XRT)"
license = "AGPL-3.0-or-later"
authors = ["Gerrit Pape <mail@gerritpape.de>", "Bjarne Wintermann <bjarne.wintermann@me.com>"]
repository = "https://github.com/papeg/xrt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
serde_json = "1.0.121"
serde = { version = "1.0", features = ["derive"] }
xrt_proc_macro = { path = "xrt_proc_macro" }
